#
# LIBRARIES
#

load("//bazel:common_settings.bzl", "vere_library")

vere_library(
    name = "urcrypt",
    srcs = glob(
        [
            "*.c",
            "*.h",
        ],
        exclude = ["urcrypt.h"],
    ),
    hdrs = ["urcrypt.h"],
    copts = [
        "-Wall",
        "-g",
        "-O3",
    ],
    include_prefix = "urcrypt",
    includes = ["."],
    linkstatic = True,
    visibility = ["//pkg:__subpackages__"],
    deps = [
        "//pkg/urcrypt/ge-additions",
        "@aes_siv",
        "@argon2",
        "@ed25519",
        "@keccak_tiny",
        "@openssl",
        "@scrypt",
        "@secp256k1",
    ],
)
