cc_library(
    name = "darwin",
    hdrs = ["rsignal.h"],
    include_prefix = "platform",
    includes = ["."],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//pkg:__subpackages__"],
)
