cc_library(
    name = "linux",
    hdrs = ["rsignal.h"],
    include_prefix = "platform",
    includes = ["."],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//pkg:__subpackages__"],
)
